--- a/heima-leadnews-service/heima-leadnews-user/src/main/resources/bootstrap.yml
+++ b/heima-leadnews-service/heima-leadnews-user/src/main/resources/bootstrap.yml
@@ -6,7 +6,10 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 8.152.209.106:8848
+        server-addr: 192.168.200.130:8848
       config:
-        server-addr: 8.152.209.106:8848
+        server-addr: 192.168.200.130:8848
         file-extension: yml
+  #忽略掉配置类
+  autoconfigure:
+    exclude: org.springframework.boot.autoconfigure.data.redis.RedisAutoConfiguration
